Fixed indentation errors

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,8 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNf/6y2d4X2++VDjviYfbNj",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNa96//vsUn+TEmdm/OJXSc"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Priya378/Internet-Analysis-Project/blob/main/Internet_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -55,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3ad28a5-7668-4af2-9bca-7e28ecbe53e2"
+        "outputId": "b9a0d21d-636c-4757-927c-8d651bd4f21b"
       },
       "source": [
         "!pip install pandas\n",
@@ -69,25 +58,25 @@
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.2)\n",
-            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas) (2018.9)\n",
+            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
+            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.2)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
-            "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
             "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
             "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
             "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
-            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
             "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
+            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
             "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->IPython) (0.2.0)\n",
@@ -119,7 +108,7 @@
           "height": 417
         },
         "id": "kA30xmOUNK77",
-        "outputId": "521a818e-8eb2-42e3-977f-4ca9cab0c079"
+        "outputId": "79285908-dea9-4e96-fac4-a66f2ce87a2f"
       },
       "source": [
         "datadf = pd.read_csv('https://raw.githubusercontent.com/\\\n",
@@ -366,7 +355,7 @@
           "height": 447
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "b6b2f995-6f1d-4b03-d6a2-f279f2a746ce"
+        "outputId": "7146a4c6-3d26-433c-840a-2604e2683e38"
       },
       "source": [
         "outagedf = datadf.set_index(\"Time\", inplace=False)  # pylint: disable=no-member\n",
@@ -602,7 +591,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 805
         },
-        "outputId": "7b88a2b7-500f-4bc1-a040-988e00e2662f"
+        "outputId": "ec32a0e6-da02-4ed5-e305-c701b9c8a4ea"
       },
       "source": [
         "hour_outagedf = pd.DataFrame({\"Count\": hour_outages}).sort_values([\"Count\"], ascending=0)\n",
@@ -786,7 +775,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 364
         },
-        "outputId": "f9cbca99-ccd9-4cbf-a59e-e4b5ef6a4027"
+        "outputId": "ba77a46f-5368-4cb3-e08f-0b56f643282f"
       },
       "source": [
         "keys = hour_outages.keys()\n",
@@ -833,11 +822,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "c91b2302-fcc6-489c-ae06-345930b7badb"
+        "outputId": "43286b35-1a8c-4778-b1c5-ab87fa9476c1"
       },
       "source": [
         "day_outagedf = pd.DataFrame({\"Count of Days\": day_outages}).\\\n",
-        "sort_values([\"Count of Days\"], ascending=0)\n",
+        "    sort_values([\"Count of Days\"], ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "d.display(day_outagedf)"
       ],
@@ -933,7 +922,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 364
         },
-        "outputId": "7dfb130d-bce1-4c05-a6c4-b5136904f07d"
+        "outputId": "610bb86c-f4bc-452a-b595-5906dd44dcb6"
       },
       "source": [
         "keys = day_outages.keys()\n",
@@ -980,7 +969,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 743
         },
-        "outputId": "7caa6d63-118e-4fbf-a95c-8db7b34f8022"
+        "outputId": "062d9f6f-3409-42a6-c0e9-99ca94008abd"
       },
       "source": [
         "connections = pd.DataFrame({\"Connections\": servers})\n",
@@ -1173,7 +1162,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 417
         },
-        "outputId": "efc92b43-3f6d-446a-8d98-b561e4c4dab8"
+        "outputId": "1b3c6774-fa40-4949-ad08-3b98de8438b3"
       },
       "source": [
         "df = datadf.copy()\n",
@@ -1410,7 +1399,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "81470c2f-d432-46f5-81ff-3dc16a541dc3"
+        "outputId": "94161885-596b-44a2-83ef-e50393da457b"
       },
       "source": [
         "d.display(daydf)"
@@ -1552,7 +1541,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "179ded3d-a90d-41e9-a496-e5a69d5b9a7f"
+        "outputId": "8452abd7-814e-43f7-835c-db91775d3049"
       },
       "source": [
         "d.display(daydf_analyse)"
@@ -1693,7 +1682,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 819
         },
-        "outputId": "81efb29c-0cd8-494f-fdf2-abc4436f2989"
+        "outputId": "de0c0fec-e782-4339-dc20-c2205d26167a"
       },
       "source": [
         "d.display(hourdf)"
@@ -1988,7 +1977,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 203
         },
-        "outputId": "365bc114-3016-41c9-8760-2a6a7267b275"
+        "outputId": "7117c105-1357-4caf-bd7a-52eed2b9a737"
       },
       "source": [
         "d.display(hourdf_analyse)"
@@ -2114,7 +2103,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 417
         },
-        "outputId": "feed970d-9f79-463b-9bc4-9cd7ca9e215e"
+        "outputId": "a04d0b32-38bd-4494-f2dc-e9c9d205e5d7"
       },
       "source": [
         "d.display(df)"
@@ -2340,7 +2329,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "69f7159d-91f2-4459-9eeb-3f44b50a63d1"
+        "outputId": "89216294-b6df-418c-efa5-15f78d643c24"
       },
       "source": [
         "d.display(analysed)"
@@ -2542,7 +2531,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 360
         },
-        "outputId": "40f66019-5189-4b1e-e00c-36eb065b8fda"
+        "outputId": "d11849d0-a438-43e8-887a-aafa10ffab36"
       },
       "source": [
         "d.display(overall_df)"
@@ -2833,9 +2822,9 @@
         "columns = [\"Latency\", \"Jitter\", \"Download\", \"Upload\", \"Packet Loss\"]\n",
         "for col in columns:\n",
         "    overall_df[(col, \"idxmin\")] = analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
-        "    .index.get_level_values(1)\n",
+        "        .index.get_level_values(1)\n",
         "    overall_df[(col, \"idxmax\")] = analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
-        "    .index.get_level_values(1)"
+        "        .index.get_level_values(1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -2862,7 +2851,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 326
         },
-        "outputId": "e61488b0-0d90-4152-997a-9e02b4536256"
+        "outputId": "3a11585f-14bf-4d54-e854-7e72e87e0b6e"
       },
       "source": [
         "d.display(overall_df)"
@@ -3154,7 +3143,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 326
         },
-        "outputId": "1fcd7cb6-5213-45be-aab5-7c8ac1429bf7"
+        "outputId": "6860a520-4dad-4be8-ffe0-197b59761121"
       },
       "source": [
         "d.display(final_df)"
@@ -3365,13 +3354,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4479084-0ba3-44e3-eee0-90dc98af1890"
+        "outputId": "f7183c1e-e11f-4d5e-d721-2d133ffb67fc"
       },
       "source": [
         "Min_Latency_Day = overall_df[\"Latency\", \"min\"].idxmin()\n",
         "Corresponding_hour = overall_df.loc[overall_df[\"Latency\", \"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
         "print(\"Best day and hour for low latency activities: \",\n",
-        "    Min_Latency_Day, \"and\", Corresponding_hour, \"IST.\")"
+        "      Min_Latency_Day, \"and\", Corresponding_hour, \"IST.\")"
       ],
       "execution_count": null,
       "outputs": [
